@@ -76,6 +76,11 @@ Error: This pattern matches values of type int t
                               ^
 Error: This variant pattern is expected to have type a
        The constructor B does not belong to type a
+#             Characters 89-92:
+        Foo -> 5
+        ^^^
+Error: This pattern matches values of type 'a t
+       but a pattern was expected which matches values of type int
 #   type _ t = Int : int t
 #   val ky : 'a -> 'a -> 'a = <fun>
 #       val test : 'a t -> 'a = <fun>
